<resources>
    <string name="app_name">bluetooth_hrns</string>
    <string name="actMain_name">bluetooth hrns</string>
    <string name="actMain_menu_rescan">Rescan</string>
    <string name="menu_about">About</string>
    <string name="menu_close">Exit</string>
    <string name="actMain_link_device_info_title">Device info title: </string>
    <string name="actMain_device_info">Device name: %1$s\nMac addr: %2$s\nClass of device:%3$s\nSignal: %4$s\nType: %5$s\nBind state: %6$s\n</string>
    <string name="actMain_link_device_service_uuid">device uuid</string>
    <string name="actMain_service_uuid">uuid</string>
    <string name="actMain_btn_pair">Pair da Device</string>
    <string name="actMain_btn_conn">Connect!!!</string>
    <string name="actMain_tv_select_mode">select mode</string>
    <string name="actByteStream_name">act Serial Stream Mode</string>
    <string name="actKeyBoard_name">act keyboard mode</string>
    <string name="actCmdLine_name">act command line mode</string>
    <string name="actMain_msg_does_not_support_uuid_service">cuz SDKnotmore15, no UUID got</string>
    <string name="actDiscovery_bond_nothing">Nothing</string>
    <string name="actMain_tv_hint_service_uuid_not_bond">uuid not found</string>
    <string name="msg_msg_bt_connect_lost">LOST DA CONNECTION</string>
    <string name="actDiscovery_msg_starting_device">BLE on ACTIVATING</string>
    <string name="actDiscovery_msg_start_bluetooth_fail">FAIL ON START BLUETOOTH</string>
    <string name="btn_ok">OK</string>
    <string name="actMain_msg_bluetooth_Bonding">bluetooth bonding</string>
    <string name="actMain_msg_bluetooth_Bond_Success">successfully bonded</string>
    <string name="actDiscovery_bond_bonded">board already bonded</string>
    <string name="actMain_msg_bluetooth_Bond_fail">fail to get bonded</string>
    <string name="actMain_find_service_uuids">find uuids</string>
    <string name="actMain_not_find_service_uuids">uuids are not found</string>
    <string name="actMain_msg_device_connecting">on connecting</string>
    <string name="actMain_msg_device_connect_succes">connect success</string>
    <string name="actMain_msg_device_connect_fail">connect fail</string>
    <string name="msg_save_file_fail">fail saving files</string>
    <string name="templet_txd">Txd: %1$dB</string>
    <string name="templet_rxd">Rxd: %1$dB</string>
    <string name="templet_hole_time">Running: %1$ds</string>
    <string name="dialog_title_io_mode_set">set dialog title</string>
    <string name="dialog_io_mode_input_set">Input type</string>
    <string name="dialog_io_mode_ascii">ASCII</string>
    <string name="dialog_io_mode_hex">HEX</string>
    <string name="dialog_io_mode_output_set">OUTPUT TYPE</string>
    <string name="msg_receive_data_wating">Waiting to receive&#8230;\n</string>
    <string name="menu_clear">clear</string>
    <string name="menu_io_mode">io mode</string>
    <string name="menu_save_to_file">save</string>
    <string name="menu_clear_history">clr his</string>
    <string name="msg_receive_data_stop">data Stop</string>
    <string name="actDiscovery_msg_not_find_device">NOT FIND DEVICE</string>
    <string name="actDiscovery_btn_rescan">RESCAN</string>
    <string name="actDiscovery_btn_connect">CONNECT DA DEVICE!!!</string>
    <string name="device_type_bredr">BR/EDR Bluetooth</string>
    <string name="device_type_ble">Low Energy Bluetooth</string>
    <string name="device_type_dumo">Duplex mode Bluetooth</string>
    <string name="actDiscovery_msg_scaning_device">SCANNING......</string>
    <string name="actDiscovery_name">act discovery mode</string>
    <string name="msg_not_hex_string">Invalid HEX string</string>
</resources>
