<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actMain_ll_device_ctrl"
            android:layout_marginBottom="5dip"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actMain_link_device_info_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actMain_tv_device_info"
                android:layout_marginLeft="10dp"
                android:text="@string/actMain_device_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actMain_link_device_service_uuid"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/actMain_tv_service_uuid"
                android:layout_marginLeft="10dp"
                android:text="@string/actMain_service_uuid"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actMain_ll_pair_or_comm"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="horizontal">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/actMain_btn_pair"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
